@@ -714,7 +714,9 @@ include_once('include/page_header.php');
 		if($_REQUEST['form'] == S_IMPORT)
 			$hosts_wdgt->addItem(import_host_form());
 		else{
-			$hosts_wdgt->addItem(get_header_host_table($_REQUEST['hostid'], 'host'));
+			if ($hostid = get_request('hostid', 0)) {
+				$hosts_wdgt->addItem(get_header_host_table($_REQUEST['hostid']));
+			}
 
 			$hostForm = new CView('configuration.host.edit');
 			$hosts_wdgt->addItem($hostForm->render());
