@@ -524,7 +524,9 @@ include_once('include/page_header.php');
 			$template_wdgt->addItem(import_host_form(true));
 		}
 		else{
-			$template_wdgt->addItem(get_header_host_table(get_request('templateid',0), 'template'));
+			if ($templateid = get_request('templateid', 0)) {
+				$template_wdgt->addItem(get_header_host_table($templateid));
+			}
 
 			$templateForm = new CView('configuration.template.edit');
 			$template_wdgt->addItem($templateForm->render());
